Overflow y fix

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -89,7 +89,7 @@ body, html {
   height: 100%;
   min-height: 100%;
   width: 30%;
-  overflow: scroll;
+  overflow-y: scroll;
   .inner {
     padding: 24px 24px 0px 24px;
   }
